Update brand name from The1600Club to the1600Club and include package-lock.json

--- a/src/content/articles/practice-makes-perfect.mdx
+++ b/src/content/articles/practice-makes-perfect.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Practice Makes Perfect: The 1600Club Philosophy"
+title: "Practice Makes Perfect: the1600Club Philosophy"
 description: "Why consistent daily practice beats cramming, and how small efforts compound into big score improvements."
 date: "2025-01-02"
-author: "1600Club Team"
+author: "the1600Club Team"
 category: "philosophy"
 tags:
   - study tips
@@ -41,7 +41,7 @@ We've all been there. Test is next week, panic sets in, and suddenly you're doin
 
 ## The Science of Spaced Repetition
 
-There's a reason 1600Club resurfaces topics you've struggled with. It's called spaced repetition, and it's one of the most well-researched learning techniques in cognitive science.
+There's a reason the1600Club resurfaces topics you've struggled with. It's called spaced repetition, and it's one of the most well-researched learning techniques in cognitive science.
 
 Here's how it works:
 
