--- a/src/content/articles/reading-writing-strategies.mdx
+++ b/src/content/articles/reading-writing-strategies.mdx
@@ -2,7 +2,7 @@
 title: "Mastering the SAT Reading & Writing Section"
 description: "Effective strategies for the digital SAT Reading and Writing section: passage techniques, evidence-based answers, and grammar priorities."
 date: "2025-01-02"
-author: "1600Club Team"
+author: "the1600Club Team"
 category: "reading-writing"
 tags:
   - reading
