--- a/src/content/articles/when-to-use-college-board-questions.mdx
+++ b/src/content/articles/when-to-use-college-board-questions.mdx
@@ -2,7 +2,7 @@
 title: "When to Use Official College Board Questions"
 description: "The strategic approach to using official SAT practice tests: save them for when they matter most."
 date: "2025-01-02"
-author: "1600Club Team"
+author: "the1600Club Team"
 category: "strategy"
 tags:
   - test strategy
@@ -60,7 +60,7 @@ Never "preview" official questions. Don't flip through tests to "see what's ther
 
 So if you're not using official questions every day, what should you use?
 
-**High-quality third-party questions.** That's exactly what 1600Club provides. Our questions are designed to match the style, difficulty, and patterns of real SAT questions—but they're unlimited.
+**High-quality third-party questions.** That's exactly what the1600Club provides. Our questions are designed to match the style, difficulty, and patterns of real SAT questions—but they're unlimited.
 
 The benefits:
 
@@ -89,7 +89,7 @@ Here's a sample timeline for a student with 3 months to prep:
 
 **Month 1:**
 - Take ONE official test for your baseline
-- Daily practice with 1600Club questions
+- Daily practice with the1600Club questions
 - Focus on understanding concepts and building habits
 
 **Month 2:**
@@ -130,11 +130,11 @@ Both modes are essential. But mixing them up—using official questions for dail
 
 Official College Board questions are precious. Treat them that way.
 
-Use one for your baseline. Save the rest for your final push. Fill the gap with unlimited, high-quality practice from 1600Club.
+Use one for your baseline. Save the rest for your final push. Fill the gap with unlimited, high-quality practice from the1600Club.
 
 When test day arrives, you'll walk in knowing exactly what to expect—because your final practice tests were authentic dress rehearsals, not half-remembered reruns.
 
-That's the 1600Club approach: strategic, intentional, and designed to maximize your score when it matters most.
+That's the1600Club approach: strategic, intentional, and designed to maximize your score when it matters most.
 
 ---
 
