Update brand name to fully lowercase: the1600club

--- a/src/content/articles/math-strategies-for-sat.mdx
+++ b/src/content/articles/math-strategies-for-sat.mdx
@@ -2,7 +2,7 @@
 title: "Essential Math Strategies for the Digital SAT"
 description: "Proven techniques for the SAT Math section: calculator tips, time management, and avoiding common traps."
 date: "2025-01-02"
-author: "the1600Club Team"
+author: "the1600club Team"
 category: "math"
 tags:
   - math
