--- a/src/content/articles/test-day-tips.mdx
+++ b/src/content/articles/test-day-tips.mdx
@@ -2,7 +2,7 @@
 title: "Test Day: What to Do Before, During, and After"
 description: "A complete guide to test day success: preparation, timing strategies, anxiety management, and what to bring."
 date: "2025-01-02"
-author: "the1600Club Team"
+author: "the1600club Team"
 category: "test-day"
 tags:
   - test day
